--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,6 +349,23 @@ footer{
 
     }
 
+    #photos {
+        column-count: 3;
+
+
+    }
+
+/*for small screen sizes 800px and down*/
+@media screen and (max-width: 800px) {
+   
+    #photos {
+        column-count: 2;
+
+
+    }
+    
+}
+
 
 
 }
